Add FeatureCategory and FeatureItem components, implement UpgradeButton, and integrate lemonSqueezy webhook verification

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.11.3",
     "@monaco-editor/react": "^4.7.0",
     "convex": "^1.19.2",
+    "crypto": "^1.0.1",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
